# mecca-pkg-llm

./: .env.example  .gitignore  README.md  RUNBOOK.md  pyproject.toml  redeploy.sh
catalog/: env_catalog.json
dataset/: .gitkeep
demo-reccommandation/: Packaging_Recommendation_Overview.docx  data.json  make_doc.py  recommendations.csv  recommendations_summary.csv
documentation/non-technical/: 01-dataset.md  02-preprocessing.md  03-sft.md  04-evaluation.md  05-streamlit-app.md
documentation/technical/: 01-dataset.md  02-preprocessing.md  03-sft.md  04-evaluation.md  05-streamlit-app.md
eval/: evaluate.py  smoke_test.py  test_offline.py
sample_photos/: README.md
scripts/: 01_extract_chunk.py  02_preprocess.py  03_format.py  recommend_demo.py
src/mecca_pkg_llm/: __init__.py  enrich.py  inference.py  metrics.py  prompts.py
training/: last_training_job.txt  launcher.py
training/training_code/: collator.py  dataset.py  requirements.txt  train.py
ui/: app.py  endpoint.py
